--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dabi</title>
+    <link rel="icon" type="image/icon" href="images/" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
