Homepage text + klein beetje CSS

--- a/index.html
+++ b/index.html
@@ -4,22 +4,109 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dabi - Homepage</title>
+		<link rel="stylesheet" href="css/styleGeneral.css" />
 	</head>
+
 	<body>
-		<h1>Dabi (Touya Todoroki)</h1>
-		<h2>Intro</h2>
-    <p>Born into an abusive family, Touya Todoroki learned from an early age the hardships of life. Non-stop training, no contact with his brother and sister thanks to the neglectance from their father and the inability to handle his own quirk due to having the wrong body for his ability, set him on the path to villany.</p>
-    <h2>Early Life</h2>
-    <p>Touya was born as the son of the #2 hero Endeavor (Enji Todoroki). His father had the dream to be the #1 hero and forced it on his kids. Being forced to train full-time without resting and not getting any contact with his brother and sister (Natsuo and Fuyumi) took his toll. For Touya only training and approval of his father mattered. This worked till his youngest brother (Shoto) was born.</p>
-    <p>Sadly Touya didn't have much luck with his quirk (cremate: blue fire that is way hotter than normal fire) and body adaptation (immune towards ice and cold environments), this made his own fire hurt him. His youngest brother was born with a fire and ice quirk, making him immune towards fire/ice and warm/cold environments. This also made him the new target of his father. With Shoto being the new target of Endeavor, Touya, also started to get neglected just like Natsuo and Fuyumi.</p>
-    <p>Touya really wanted the approval of his father, so he kept training even when his father told him to stop. After a while Touya found a new trick and wanted to show his father. He asked him to meet in a forest nearby the house but Endeavor didn't show op. Touya didn't take this well and went beserk. The aftermath was a whole forest on fire and Touya presumed dead.</p>
-    <h2>Villain Arc</h2>
-    <p>The villain Dabi came out of nowhere and was known as a ruthless killer. His appearence wasn't really friendly: burnmarks, stitches to keep his flesh together and black hair (colored). What no one knows is, that he actually is Touya Todoroki, the supposed to be dead son of Endeavor.</p>
-    <p>Dabi is out for revenge on his father. He does this by following Stain (another villain) his ideals to cleanse the world from fake (corrupt) heroes by murdering them. Dabi joins the League of Villains when Stain is defeated by 3 hero students (1 of them being Shoto Todoroki). This is because he thought that Stain worked together with them.</p>
-    <p>He didn't really care about the League, but thought that he could use them to get closer to Endeavor. This works with joining them in different attacks on hero students (and his youngest brother).</p>
-    <p>After the multiple attacks, it was time to go all out. He comes out as Touya Todoroki and fights Shoto directly because Endeavor is too shocked to fight. Dabi won this fight but had to retreat with the League. This was because Shigaraki wasn't ready to fight yet.</p>
-    <p>After all the waiting he finally fights again. Starting with just his youngest brother Shoto and endeavor joining in later. Dabi decides for a suicide mission and to take as much people with him as possible. To prevent this his mother, Natuo and Fuyumi all join Shoto with their ice to stop Dabi from heating and blowing up. He is defeated.</p>
-    <h2>Aftermath</h2>
-    <p>After being defeated, Dabi did not die. He was locked up in a cell that keeps him alive a little longer. He is sure to die from his wounds but thanks to that cell, it takes longer. His family keeps visiting him even tho he hates them. Atleast, he accepted to forgive his mother and siblings. But not his dad.</p>
+		<div class="container">
+			<header>
+				<div class="header">
+					<div class="headerItem"><h1>HOME</h1></div>
+					<div class="headerItem"><h1>QUIRK</h1></div>
+					<div class="headerItem"><h1>THE LEAGUE</h1></div>
+				</div>
+			</header>
+			<main>
+				<h1>Dabi (Touya Todoroki)</h1>
+				<div class="intro">
+					<h2>Intro</h2>
+					<p>
+						<b
+							>Born into an abusive family, Touya Todoroki learned from an early
+							age the hardships of life. Non-stop training, no contact with his
+							brother and sister thanks to the neglectance from their father and
+							the inability to handle his own quirk due to having the wrong body
+							for his ability, set him on the path to villany.</b
+						>
+					</p>
+				</div>
+				<div class="early">
+					<h2>Early Life</h2>
+					<p>
+						Touya was born as the son of the #2 hero Endeavor (Enji Todoroki).
+						His father had the dream to be the #1 hero and forced it on his
+						kids. Being forced to train full-time without resting and not
+						getting any contact with his brother and sister (Natsuo and Fuyumi)
+						took his toll. For Touya only training and approval of his father
+						mattered. This worked till his youngest brother (Shoto) was born.
+					</p>
+					<p>
+						Sadly Touya didn't have much luck with his quirk (cremate: blue fire
+						that is way hotter than normal fire) and body adaptation (immune
+						towards ice and cold environments), this made his own fire hurt him.
+						His youngest brother was born with a fire and ice quirk, making him
+						immune towards fire/ice and warm/cold environments. This also made
+						him the new target of his father. With Shoto being the new target of
+						Endeavor, Touya, also started to get neglected just like Natsuo and
+						Fuyumi.
+					</p>
+					<p>
+						Touya really wanted the approval of his father, so he kept training
+						even when his father told him to stop. After a while Touya found a
+						new trick and wanted to show his father. He asked him to meet in a
+						forest nearby the house but Endeavor didn't show op. Touya didn't
+						take this well and went beserk. The aftermath was a whole forest on
+						fire and Touya presumed dead.
+					</p>
+				</div>
+				<div class="villain">
+					<h2>Villain Arc</h2>
+					<p>
+						The villain Dabi came out of nowhere and was known as a ruthless
+						killer. His appearence wasn't really friendly: burnmarks, stitches
+						to keep his flesh together and black hair (colored). What no one
+						knows is, that he actually is Touya Todoroki, the supposed to be
+						dead son of Endeavor.
+					</p>
+					<p>
+						Dabi is out for revenge on his father. He does this by following
+						Stain (another villain) his ideals to cleanse the world from fake
+						(corrupt) heroes by murdering them. Dabi joins the League of
+						Villains when Stain is defeated by 3 hero students (1 of them being
+						Shoto Todoroki). This is because he thought that Stain worked
+						together with them.
+					</p>
+					<p>
+						He didn't really care about the League, but thought that he could
+						use them to get closer to Endeavor. This works with joining them in
+						different attacks on hero students (and his youngest brother).
+					</p>
+					<p>
+						After the multiple attacks, it was time to go all out. He comes out
+						as Touya Todoroki and fights Shoto directly because Endeavor is too
+						shocked to fight. Dabi won this fight but had to retreat with the
+						League. This was because Shigaraki wasn't ready to fight yet.
+					</p>
+					<p>
+						After all the waiting he finally fights again. Starting with just
+						his youngest brother Shoto and endeavor joining in later. Dabi
+						decides for a suicide mission and to take as much people with him as
+						possible. To prevent this, his mother, Natsuo and Fuyumi all join
+						Shoto with their ice to stop Dabi from heating and blowing up. He is
+						defeated.
+					</p>
+				</div>
+				<div class="aftermath">
+					<h2>Aftermath</h2>
+					<p>
+						After being defeated, Dabi did not die. He was locked up in a cell
+						that keeps him alive a little longer. He is sure to die from his
+						wounds but thanks to that cell, it takes longer. His family keeps
+						visiting him even tho he hates them. Atleast, he accepted to forgive
+						his mother and siblings. But not his dad.
+					</p>
+				</div>
+			</main>
+		</div>
 	</body>
 </html>
